[workspace]
members = [
    "common",
    "log-device",
    "repository"
]

resolver = "3"

[workspace.dependencies]
tokio = { version = "1.38", features = ["full"] }
bytes = "1.6"
thiserror = "2.0.12"
async-trait = "0.1.88"
uuid = { version = "1.17.0", features = ["v4"] }
derive_builder = "0.20.2"
